support passing in an HTTP agent

--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
   "devDependencies": {
     "buffer-from": "^1.1.1",
     "express": "^4.15.3",
+    "launchdarkly-js-test-helpers": "1.2.0",
     "mocha": "5.2.0",
     "nyc": "^15.0.0",
     "serve-static": "^1.12.3",
     "ssestream": "^1.0.0",
     "standard": "^10.0.2",
+    "tunnel": "0.0.6",
     "webpack": "^3.5.6"
   },
   "scripts": {
