update oldest Node version to 12, use newer CI images

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,11 +29,9 @@ jobs:
   oldest-long-term-support-release:
     <<: *node-template
     docker:
-      - image: circleci/node:6
-      - image: redis
+      - image: cimg/node:12.22
 
   current-release:
     <<: *node-template
     docker:
-      - image: circleci/node:latest
-      - image: redis
+      - image: cimg/node:current
