implement contract tests

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,12 @@ node-template: &node-template
     - store_artifacts:
         path: reports/junit
 
+    - run: make build-contract-tests
+    - run:
+        command: make start-contract-test-service
+        background: true
+    - run: make run-contract-tests
+
 jobs:
   oldest-long-term-support-release:
     <<: *node-template
