--- a/release-please-config.json
+++ b/release-please-config.json
@@ -3,7 +3,8 @@
   "packages" : {
     "." : {
       "release-type" : "node",
-      "include-component-in-tag" : false
+      "include-component-in-tag" : false,
+      "include-v-in-tag": false
     }
   }
 }
